force-app/main/default/objects/Study_Site__c/fields/Study_Orientation_Required__c.field-meta.xml
<CustomField>
    <fullName>Study_Orientation_Required__c</fullName>
    <formula>Clinical_Trial_Profile__r.Orientation_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Study Orientation Required</label>
    <type>Checkbox</type>
</CustomField>