force-app/main/default/objects/Study_Site__c/fields/Study_Site_Email__c.field-meta.xml
<CustomField>
    <fullName>Study_Site_Email__c</fullName>
    <label>Study Site Email</label>
    <type>Email</type>
</CustomField>