force-app/main/default/objects/Study_Site__c/fields/Study_Site_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Study_Site_Full_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Study Site Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>