force-app/main/default/objects/Study_Site__c/fields/Study_Site_Key__c.field-meta.xml
<CustomField>
    <fullName>Study_Site_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Study Site Key</label>
    <length>255</length>

    <type>Text</type>
    <unique>true</unique>
</CustomField>