force-app/main/default/objects/Study_Site__c/fields/Study_Site_Number__c.field-meta.xml
<CustomField>
    <fullName>Study_Site_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Study Site Number</label>
    <length>255</length>
<!--    <trackHistory>true</trackHistory>-->
    <type>Text</type>
</CustomField>