force-app/main/default/objects/Study_Site__c/fields/Study_Site_Phone__c.field-meta.xml
<CustomField>
    <fullName>Study_Site_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Phone number referenced in the email for Virtual Trial Participants</inlineHelpText>
    <label>Study Site Phone</label>

    <type>Phone</type>
</CustomField>