force-app/main/default/objects/Study_Site__c/fields/Study_Site_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Study_Site_Status_Reason__c</fullName>
    <inlineHelpText>Reason for Pausing Studies</inlineHelpText>
    <label>Study Site Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sponsor Initiated Hold</fullName>
            </value>
            <value>
                <fullName>Supply/Resupply of Investigational Product</fullName>
            </value>
            <value>
                <fullName>Supply/Resupply of Supplies/Materials (i.e., Lab Kits)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>