force-app/main/default/objects/Study_Site__c/fields/Study_Site_Type__c.field-meta.xml
<CustomField>
    <fullName>Study_Site_Type__c</fullName>
    <label>Study Site Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Traditional</fullName>
                <default>true</default>
                <label>Traditional</label>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>