force-app/main/default/objects/Study_Site__c/fields/Suppress_Study_Site_PI_Emails__c.field-meta.xml
<CustomField>
    <fullName>Suppress_Study_Site_PI_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box will stop study related emails for PI and site staff</inlineHelpText>
    <label>Suppress Study Site PI Emails</label>
    <type>Checkbox</type>
</CustomField>