force-app/main/default/objects/Study_Site__c/fields/Visit_Results_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Visit_Results_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visit Results Sharing</label>
    <type>Checkbox</type>
</CustomField>