force-app/main/default/objects/Study_Site__c/validationRules/Enable_for_Call_Center_Support_as_Study.validationRule-meta.xml
<ValidationRule>
    <fullName>Enable_for_Call_Center_Support_as_Study</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Enable_for_Call_Center_Support__c, NOT(Clinical_Trial_Profile__r.Enable_for_Call_Center_Support__c))</errorConditionFormula>
    <errorMessage>Call Center Support cannot be enabled in Study Site, if not enabled for Study</errorMessage>
</ValidationRule>