force-app/main/default/objects/Study_Site__c/validationRules/Janssen_PI_Unique.validationRule-meta.xml
<ValidationRule>
    <fullName>Janssen_PI_Unique</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Principal_Investigator__r.Jenssen_unique__c,
        NOT(ISPICKVAL(Clinical_Trial_Profile__r.CommunityTemplate__c, &quot;Janssen&quot;)))</errorConditionFormula>
    <errorMessage>This PI is Janssen unique and cannot be added on IQVIA Study Site.</errorMessage>
</ValidationRule>