force-app/main/default/objects/Study_Site__c/validationRules/PI_Hold.validationRule-meta.xml
<ValidationRule>
    <fullName>PI_Hold</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISCHANGED(Override_PI_Referral_Status__c ),
(ISPICKVAL(PRIORVALUE(Override_PI_Referral_Status__c ), &quot;On Hold&quot;)),ISPICKVAL(Override_Study_Site_Recruitment_Status__c, &quot;On Hold&quot;) )</errorConditionFormula>
    <errorMessage>This Override PI Recruitment Status value cannot be changed</errorMessage>
</ValidationRule>