force-app/main/default/objects/Study_Site__c/validationRules/Start_End_enrolment_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_End_enrolment_date</fullName>
    <active>false</active>
    <errorConditionFormula>Enrollment_Start_Date__c  &gt;  Enrollment_End_Date__c</errorConditionFormula>
    <errorMessage>Enrollment End Date can&#39;t happen before Enrolment Start Date</errorMessage>
</ValidationRule>