force-app/main/default/objects/Study_Site__c/validationRules/Suppress_Site_PI_Emails_based_on_Study.validationRule-meta.xml
<ValidationRule>
    <fullName>Suppress_Site_PI_Emails_based_on_Study</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(Suppress_Study_Site_PI_Emails__c), Clinical_Trial_Profile__r.Suppress_PI_Emails__c)</errorConditionFormula>
    <errorMessage>Study Site PI Emails have to be suppressed if Study PI Emails are.</errorMessage>
</ValidationRule>