force-app/main/default/objects/Study_Site__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Protocol_ID__c</columns>
    <columns>Billable_Code_CRM_Number__c</columns>
    <columns>Clinical_Trial_Profile__c</columns>
    <columns>Study_Site_Number__c</columns>
    <columns>NAME</columns>
    <columns>Principal_Investigator__c</columns>
    <columns>Override_PI_Referral_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>