force-app/main/default/objects/Study_Site__c/listViews/PI_Recruitment_Support.listView-meta.xml
<ListView>
    <fullName>PI_Recruitment_Support</fullName>
    <columns>Enrollment_Actual_to_Target__c</columns>
    <columns>Enrollment_Target__c</columns>
    <columns>Enrollment_Actual__c</columns>
    <columns>Override_PI_Referral_Status__c</columns>
    <columns>Clinical_Trial_Profile__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Enrollment_Actual_to_Target__c</field>
        <operation>lessThan</operation>
        <value>0</value>
    </filters>
    <label>PI Recruitment Support</label>
</ListView>