force-app/main/default/objects/Study_Site__c/listViews/Study_Sites_Rejected_by_PI.listView-meta.xml
<ListView>
    <fullName>Study_Sites_Rejected_by_PI</fullName>
    <columns>Study_Site_Number__c</columns>
    <columns>NAME</columns>
    <columns>Principal_Investigator__c</columns>
    <columns>Clinical_Trial_Profile__c</columns>
    <columns>Override_PI_Referral_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Override_PI_Referral_Status__c</field>
        <operation>equals</operation>
        <value>Accepted,Invitation Sent,Declined (Acceptance),Accepted (Admin)</value>
    </filters>
    <label>Study Sites by PI Status</label>
</ListView>