force-app/main/default/objects/Study_Site__c/listViews/Tamara_Sites.listView-meta.xml
<ListView>
    <fullName>Tamara_Sites</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Principal_Investigator__c</columns>
    <columns>Is_Virtual_Study_Site__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tamara</label>
</ListView>