force-app/main/default/objects/Study_Site__c/listViews/test.listView-meta.xml
<ListView>
    <fullName>test</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>test</label>
    <language>en_US</language>
</ListView>